rtg_tests/negative/unaddressable_named_array/cmd/app/main.go
package main

type values [2]int

func main() {
	part := values{1, 2}[:]
	_ = part
}
